js/js.translator/testData/incremental/invalidation/typeScriptExportsPerModule/main/m.0.d.ts
type Nullable<T> = T | null | undefined
export declare function box(stepId: number): string;